tests/test_proof/bad/rationals-empty.catala_en
## Test

```catala
declaration scope A:
  internal x content decimal
  output y content boolean

scope A:
  definition x equals 1.
  definition y under condition x > 1./3. consequence equals true
```

```catala-test-inline
$ catala Proof --disable_counterexamples 
[WARNING] [A.y] This variable might return an empty error:
┌─⯈ rationals-empty.catala_en:6.10-6.11:
└─┐
6 │   output y content boolean
  │          ‾
  └─ Test
Counterexample generation is disabled so none was generated.
```
